# duck-console

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
duck_console/: __init__.py  cli.py
duck_console/core/: duck_engine.py  file_reader.py  layout_importer.py
duck_console/utils/: io_helpers.py
duck_console/web/: __init__.py  app.py
examples/: import_layout_demo.py
tests/: test_duckdb_queries.py  test_import.py
