[tool.poetry]
name = "duck-console"
version = "0.1.0"
description = "A web-based interactive SQL console powered by DuckDB"
authors = ["Lucas Pereira <luc45.pereira@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Luc45-Pereira/duck-console"
packages = [{include = "duck_console"}]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.9.1"
streamlit = "^1.28.1"
pandas = "^2.1.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
typer = "^0.9.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[tool.poetry.scripts]
duck-console = "duck_console.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3